force-app/main/default/objects/Quote/fields/X_Days_Formula__c.field-meta.xml
<CustomField>
    <fullName>X_Days_Formula__c</fullName>
    <formula>IF(TEXT(Quote_Type__c) == $Setup.CnISystemVariables__c.QuoteSpotPrice__c 
  , IF(ISBLANK(X_End_Day_Raw__c) || ISBLANK(Start_Day__c)
      , IF(Term__c == 1
          , DAY(End_Date__c)
          , NULL
        )
      , X_End_Day_Raw__c - Start_Day__c + 1
    )
  , NULL
)</formula>
    <label>X Days Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>