force-app/main/default/objects/Quote/fields/X_End_Day_Raw__c.field-meta.xml
<CustomField>
    <fullName>X_End_Day_Raw__c</fullName>
    <description>for intra month spot quotes when the quote is not for the entire month</description>
    <inlineHelpText>for intra month spot quotes when the quote is not for the entire month</inlineHelpText>
    <label>X End Day Raw</label>
    <type>Date</type>
</CustomField>