force-app/main/default/objects/Quote/recordTypes/Base_Pricing.recordType-meta.xml
<RecordType>
    <fullName>Base_Pricing</fullName>
    <active>true</active>
    <label>Base Pricing</label>
</RecordType>