force-app/main/default/objects/Quote/recordTypes/Fixed_Price_Tier.recordType-meta.xml
<RecordType>
    <fullName>Fixed_Price_Tier</fullName>
    <active>true</active>
    <label>Fixed Price Tier</label>
</RecordType>