force-app/main/default/objects/Quote/recordTypes/Spot_Pricing.recordType-meta.xml
<RecordType>
    <fullName>Spot_Pricing</fullName>
    <active>true</active>
    <label>Spot Pricing</label>
</RecordType>