force-app/main/default/objects/Quote/recordTypes/Surrendered_Storage_Pricing.recordType-meta.xml
<RecordType>
    <fullName>Surrendered_Storage_Pricing</fullName>
    <active>true</active>
    <label>Surrendered Storage Pricing</label>
</RecordType>