force-app/main/default/objects/Quote/validationRules/Cannot_Create_Quotes.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Create_Quotes</fullName>
    <active>true</active>
    <description>Users should not be able to create quotes for months prior to 3/1/2020</description>
    <errorConditionFormula>AND(
ISNEW(),
 Start_Date__c  &lt;  DATE(2020,3,1) 
)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>You cannot create quotes for months prior to 3/1/2020</errorMessage>
</ValidationRule>