force-app/main/default/objects/Quote/validationRules/Notice_Days_GreaterThan_180.validationRule-meta.xml
<ValidationRule>
    <fullName>Notice_Days_GreaterThan_180</fullName>
    <active>true</active>
    <description>Copied from CES Contract</description>
    <errorConditionFormula>AND(
NOT(
ISBLANK( Renewal_Notice_Days__c )
), OR(
Renewal_Notice_Days__c &lt; 0,
Renewal_Notice_Days__c &gt; 180
)
)</errorConditionFormula>
    <errorMessage>Renewal Notice Days must be between 0 and 180</errorMessage>
</ValidationRule>