force-app/main/default/objects/Quote/validationRules/Renewal_Fields_Populated_If_Autorenew.validationRule-meta.xml
<ValidationRule>
    <fullName>Renewal_Fields_Populated_If_Autorenew</fullName>
    <active>true</active>
    <description>validates that renewal term and notice days are populated</description>
    <errorConditionFormula>AND( Auto_renew__c = true, OR(ISBLANK(Renewal_Term__c ) , ISBLANK(Renewal_Notice_Days__c   )))</errorConditionFormula>
    <errorMessage>If a quote is autorenew, both renewal term and notice days must be populated.</errorMessage>
</ValidationRule>