force-app/main/default/objects/Quote/validationRules/Renewal_Term_GreaterThan_60_Months.validationRule-meta.xml
<ValidationRule>
    <fullName>Renewal_Term_GreaterThan_60_Months</fullName>
    <active>true</active>
    <description>Copied from CES Contract</description>
    <errorConditionFormula>AND(
NOT(
ISBLANK( Renewal_Term__c )
), OR(
Renewal_Term__c &lt; 1,
Renewal_Term__c &gt; 60
)
)</errorConditionFormula>
    <errorMessage>Renewal Term must be less than or equal to 60 months</errorMessage>
</ValidationRule>