force-app/main/default/objects/Quote/validationRules/Start_Date_first_of_the_month.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_first_of_the_month</fullName>
    <active>true</active>
    <errorConditionFormula>DAY(Start_Date__c) &gt; 1</errorConditionFormula>
    <errorMessage>Start Date must be on the first of the month</errorMessage>
</ValidationRule>